Fixed spacing

--- a/styles/06-components/courses/course-suitable-and-skills.scss
+++ b/styles/06-components/courses/course-suitable-and-skills.scss
@@ -55,7 +55,7 @@
 
   .course-suitable-description,
   .course-skills-description {
-    margin-bottom: 0;
+    margin: 0;
   }
 
   .course-skills {
