--- a/styles/06-components/courses/courses-certificate.scss
+++ b/styles/06-components/courses/courses-certificate.scss
@@ -29,10 +29,11 @@
   }
 
   .certificate-text-title {
-    margin-top: 0;
+    margin: 0 0 16px;
   }
 
   .certificate-text-description {
+    //margin: 0;
   }
 
   .certificate-image-container {
